fix: links overflow outside the body

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -63,6 +63,7 @@ h4 {
 
 a {
   color: var(--text-secondary);
+  word-break: break-all;
   &:hover {
     color: var(--text-first);
   }
